# StaticFFmpeg4Android

./: .gitignore  README.md  build.gradle  dependencies.gradle  settings.gradle
SessionCombine/: build.gradle
SessionCombine/src/androidTest/java/com/zz/combine/: ExampleInstrumentedTest.java
SessionCombine/src/main/: AndroidManifest.xml
SessionCombine/src/main/cpp/: CMakeLists.txt  ClipSelector.h  SessionCombine.cpp
SessionCombine/src/main/java/com/zz/combine/: MusicTimeLineFactory.java  ProgressListener.java  ResourceUtils.java  SSNative.java  SessionCombiner.java  TestVFM.java  TestVideoFragment.java  TimePoint.java  VideoFragment.java  VideoFragmentsExporter.java  VideoFragmentsManager.java  VideoFragmentsPlayer.java
SessionCombine/src/main/java/com/zz/combine/mtl/: MTL1.java  MTL2.java  MusicTimelineBase.java
SessionCombine/src/main/java/com/zz/combine/scale/: BufferInfoUtils.java  VideoFragmentScaler.java  VideoScaleHelper.java
SessionCombine/src/main/java/com/zz/combine/view/: RectFrameLayout.java  RectProgressView.java  SCItem.java  SCItemAdapter.java  SessionCombineView.java
SessionCombine/src/main/res/drawable/: bg_gradient_sc.xml
SessionCombine/src/main/res/layout/: frag_session_combine.xml  item_sc.xml
SessionCombine/src/main/res/values/: strings.xml  styles.xml
SessionCombine/src/test/java/com/zz/combine/: ExampleUnitTest.java
app/: build.gradle
app/src/androidTest/java/rqg/fantasy/staticffmpeg/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/java/rqg/fantasy/staticffmpeg/: MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/rqg/fantasy/staticffmpeg/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
